polish code - synonym